# openMP_examples_and_Matrix-Matrix-Multiplication

./: CMakeLists.txt  README.md  main.cpp  main_alt.cpp  matmult_functions.h  matmult_measuring.cpp  matmult_measuring.h  matmult_parallel.cpp  matmult_seq.cpp  matrix_helpers.cpp  matrix_helpers.h  min_examples.cpp  min_examples.h  results.ods
